feat: 피드백 해결 상태 변경 api 구현 (#24)